tests/snapshots/html_test__html_doc_files_multiple-75.snap
---
source: tests/html_test.rs
expression: files.get(file_name).unwrap()
---
(function () {
  window.DENO_DOC_SEARCH_INDEX = {"kind":"search","nodes":[{"id":"namespace_foo","kind":[{"char":"c","kind":"Class","title":"Class"}],"name":"Foo","file":".","doc":"some Foo docs Bar","url":"././~/Foo.html","deprecated":false},{"id":"namespace_foo","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.prototype.[Symbol.iterator]","file":".","doc":"","url":"././~/Foo.prototype.[Symbol.iterator].html","deprecated":false},{"id":"namespace_foo","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.prototype.getter","file":".","doc":"","url":"././~/Foo.prototype.getter.html","deprecated":false},{"id":"namespace_foo","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.prototype.setter","file":".","doc":"","url":"././~/Foo.prototype.setter.html","deprecated":false},{"id":"namespace_foo","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.prototype.getterAndSetter","file":".","doc":"","url":"././~/Foo.prototype.getterAndSetter.html","deprecated":false},{"id":"namespace_foo","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.prototype.divergentAccessor","file":".","doc":"","url":"././~/Foo.prototype.divergentAccessor.html","deprecated":false},{"id":"namespace_foo","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.staticSetter","file":".","doc":"","url":"././~/Foo.staticSetter.html","deprecated":false},{"id":"namespace_foo","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.prototype.test","file":".","doc":"","url":"././~/Foo.prototype.test.html","deprecated":false},{"id":"namespace_foo","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Foo.staticMethod","file":".","doc":"","url":"././~/Foo.staticMethod.html","deprecated":false},{"id":"namespace_foo","kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Foo.bar","file":".","doc":"","url":"././~/Foo.bar.html","deprecated":false},{"id":"namespace_foo","kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Foo.prototype.protectedProperty","file":".","doc":"","url":"././~/Foo.prototype.protectedProperty.html","deprecated":false},{"id":"namespace_foo","kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Foo.prototype.readonlyProperty","file":".","doc":"","url":"././~/Foo.prototype.readonlyProperty.html","deprecated":false},{"id":"namespace_foo","kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Foo.prototype.foo","file":".","doc":"","url":"././~/Foo.prototype.foo.html","deprecated":false},{"id":"namespace_foo","kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Foo.prototype.\"&gt;&lt;img src=x onerror=alert(1)&gt;","file":".","doc":"","url":"././~/Foo.prototype.%22%3E%3Cimg%20src=x%20onerror=alert(1)%3E.html","deprecated":false},{"id":"namespace_bar","kind":[{"char":"c","kind":"Class","title":"Class"}],"name":"Bar","file":".","doc":"Some quote in bar docs This quote part is ignored when getting the title of this docBar docs","url":"././~/Bar.html","deprecated":false},{"id":"namespace_foobar","kind":[{"char":"c","kind":"Class","title":"Class"}],"name":"Foobar","file":".","doc":"Foobar docsheadingcontentsub heading","url":"././~/Foobar.html","deprecated":false},{"id":"namespace_abstractclass","kind":[{"char":"c","kind":"Class","title":"Class"}],"name":"AbstractClass","file":".","doc":"","url":"././~/AbstractClass.html","deprecated":false},{"id":"namespace_abstractclass","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"AbstractClass.prototype.method","file":".","doc":"","url":"././~/AbstractClass.prototype.method.html","deprecated":false},{"id":"namespace_abstractclass","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"AbstractClass.prototype.getter","file":".","doc":"","url":"././~/AbstractClass.prototype.getter.html","deprecated":false},{"id":"namespace_abstractclass","kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"AbstractClass.prototype.foo","file":".","doc":"","url":"././~/AbstractClass.prototype.foo.html","deprecated":false},{"id":"namespace_hello","kind":[{"char":"I","kind":"Interface","title":"Interface"}],"name":"Hello","file":".","doc":"","url":"././~/Hello.html","deprecated":false},{"id":"namespace_hello","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Hello.optionalMethod","file":".","doc":"","url":"././~/Hello.optionalMethod.html","deprecated":false},{"id":"namespace_hello","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Hello.computedMethod","file":".","doc":"","url":"././~/Hello.computedMethod.html","deprecated":false},{"id":"namespace_hello","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Hello.accessor","file":".","doc":"a getter/setter pair","url":"././~/Hello.accessor.html","deprecated":false},{"id":"namespace_hello","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Hello.readonlyAccessor","file":".","doc":"","url":"././~/Hello.readonlyAccessor.html","deprecated":false},{"id":"namespace_hello","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Hello.writeonlyAccessor","file":".","doc":"","url":"././~/Hello.writeonlyAccessor.html","deprecated":false},{"id":"namespace_hello","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Hello.divergentAccessor","file":".","doc":"","url":"././~/Hello.divergentAccessor.html","deprecated":false},{"id":"namespace_hello","kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Hello.world","file":".","doc":"","url":"././~/Hello.world.html","deprecated":false},{"id":"namespace_hello","kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Hello.test","file":".","doc":"Some docs","url":"././~/Hello.test.html","deprecated":false},{"id":"namespace_hello","kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Hello.ab","file":".","doc":"","url":"././~/Hello.ab.html","deprecated":false},{"id":"namespace_hello","kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Hello.x","file":".","doc":"","url":"././~/Hello.x.html","deprecated":false},{"id":"namespace_emptyinterface","kind":[{"char":"I","kind":"Interface","title":"Interface"}],"name":"EmptyInterface","file":".","doc":"","url":"././~/EmptyInterface.html","deprecated":false},{"id":"namespace_interfacewithindexsignature","kind":[{"char":"I","kind":"Interface","title":"Interface"}],"name":"InterfaceWithIndexSignature","file":".","doc":"","url":"././~/InterfaceWithIndexSignature.html","deprecated":false},{"id":"namespace_baz","kind":[{"char":"T","kind":"TypeAlias","title":"Type Alias"}],"name":"Baz","file":".","doc":"","url":"././~/Baz.html","deprecated":false},{"id":"namespace_baz","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"Baz.bar","file":".","doc":"","url":"././~/Baz.bar.html","deprecated":false},{"id":"namespace_baz","kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"Baz.foo","file":".","doc":"","url":"././~/Baz.foo.html","deprecated":false},{"id":"namespace_typealias","kind":[{"char":"T","kind":"TypeAlias","title":"Type Alias"}],"name":"TypeAlias","file":".","doc":"","url":"././~/TypeAlias.html","deprecated":false},{"id":"namespace_qaz","kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"qaz","file":".","doc":"content","url":"././~/qaz.html","deprecated":false},{"id":"namespace_c","kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"c","file":".","doc":"","url":"././~/c.html","deprecated":false},{"id":"namespace_d","kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"d","file":".","doc":"","url":"././~/d.html","deprecated":false},{"id":"namespace_functionwithoptionalparameters","kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"functionWithOptionalParameters","file":".","doc":"","url":"././~/functionWithOptionalParameters.html","deprecated":false},{"id":"namespace_enum","kind":[{"char":"E","kind":"Enum","title":"Enum"}],"name":"Enum","file":".","doc":"","url":"././~/Enum.html","deprecated":false},{"id":"namespace_enum2","kind":[{"char":"E","kind":"Enum","title":"Enum"}],"name":"Enum2","file":".","doc":"the description","url":"././~/Enum2.html","deprecated":false},{"id":"namespace_somevariable","kind":[{"char":"v","kind":"Variable","title":"Variable"}],"name":"someVariable","file":".","doc":"","url":"././~/someVariable.html","deprecated":false},{"id":"namespace_anothervariable","kind":[{"char":"v","kind":"Variable","title":"Variable"}],"name":"anotherVariable","file":".","doc":"","url":"././~/anotherVariable.html","deprecated":false},{"id":"namespace_anothervariable","kind":[{"char":"m","kind":"Method","title":"Method"}],"name":"anotherVariable.bar","file":".","doc":"","url":"././~/anotherVariable.bar.html","deprecated":false},{"id":"namespace_anothervariable","kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"anotherVariable.foo","file":".","doc":"","url":"././~/anotherVariable.foo.html","deprecated":false},{"id":"namespace_testing_externalfunction","kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"Testing.externalFunction","file":".","doc":"","url":"././~/Testing.externalFunction.html","deprecated":false},{"id":"namespace_testing_x","kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"Testing.x","file":".","doc":"","url":"././~/Testing.x.html","deprecated":false},{"id":"namespace_testing_t","kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"Testing.t","file":".","doc":"","url":"././~/Testing.t.html","deprecated":false},{"id":"namespace_testing","kind":[{"char":"c","kind":"Class","title":"Class"},{"char":"N","kind":"Namespace","title":"Namespace"}],"name":"Testing","file":".","doc":"","url":"././~/Testing.html","deprecated":false},{"id":"namespace_compoundtype","kind":[{"char":"I","kind":"Interface","title":"Interface"},{"char":"v","kind":"Variable","title":"Variable"}],"name":"CompoundType","file":".","doc":"","url":"././~/CompoundType.html","deprecated":false},{"id":"namespace_compoundtype","kind":[{"char":"p","kind":"Property","title":"Property"}],"name":"CompoundType.bufferedAmount","file":".","doc":"","url":"././~/CompoundType.bufferedAmount.html","deprecated":false},{"id":"namespace_x","kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"x","file":"c","doc":"","url":"./c/~/x.html","deprecated":false},{"id":"namespace_externalfunction","kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"externalFunction","file":"d","doc":"","url":"./d/~/externalFunction.html","deprecated":false},{"id":"namespace_x","kind":[{"char":"f","kind":"Function","title":"Function"}],"name":"x","file":"foo","doc":"","url":"./foo/~/x.html","deprecated":false},{"id":"namespace_default","kind":[{"char":"v","kind":"Variable","title":"Variable"}],"name":"default","file":"foo","doc":"The default export item.This item reproduces the issue reported in https://github.com/jsr-io/jsr/issues/459","url":"./foo/~/default.html","deprecated":false}]};
})()
